# scanner

./: .gitignore  CMakeLists.txt
cmake/Util/: Op.cmake
examples/apps/shot_detection/: shot_detect.py
examples/python_kernel/: my_kernel.py  python.py
examples/tutorial/: 00_basic.py
python/scannerpy/: column.py  config.py  database.py  table.py
python/scannerpy/stdlib/: loaders.py  parsers.py
scanner/engine/: evaluate_worker.cpp  load_worker.cpp  load_worker.h  master.cpp  python_kernel.h  rpc.proto  save_worker.cpp  worker.cpp
scanner/video/: CMakeLists.txt  decoder_automata.h  decoder_automata_cmd.cpp
stdlib/: CMakeLists.txt
tests/: py_test.py
